[package]
name = "datagram-transport"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A library for sending and receiving datagrams"
repository = "https://github.com/piot/datagram-transport-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
